--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,17 +3,14 @@
 </a>
 
 <form method="GET" action="{% url 'home' %}">
-  <input type="text" name="q" placeholder="Search Rooms"/>
+  <input type="text" name="q" placeholder="Search Rooms" />
 </form>
 
-
 {% if request.user.is_authenticated %}
-  <a href="{% url 'logout' %}">Log Out</a>
-
+<h4>{{ request.user.username }}</h4>
+<a href="{% url 'logout' %}">Log Out</a>
 {% else %}
-  <a href="{% url 'login' %}">Login</a>
+<a href="{% url 'login' %}">Login</a>
 {% endif %}
 
-
-
-<hr/>
+<hr />
