--- a/base/templates/base/update-user.html
+++ b/base/templates/base/update-user.html
@@ -1,12 +1,11 @@
 {% extends 'main.html' %}
-
 {% block content %}
-    <main class="delete-item layout">
+    <main class="update-account layout">
         <div class="container">
             <div class="layout__box">
                 <div class="layout__boxHeader">
                     <div class="layout__boxTitle">
-                        <a href="{{ request.META.HTTP_REFERER }}">
+                        <a href="{% url 'home' %}">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32"
                                 viewBox="0 0 32 32">
                                 <title>arrow-left</title>
@@ -15,23 +14,24 @@
                                 </path>
                             </svg>
                         </a>
-                        <h3>Back</h3>
+                        <h3>Edit your profile</h3>
                     </div>
                 </div>
                 <div class="layout__body">
-                    <form class="form" action="" method="POST">
-                        {% csrf_token %}
+                    <form class="form" action="#" method="POST">
+                    {% csrf_token %}
+                        {% for field in form %}
                         <div class="form__group">
-                            <p>Are you sure to delete "<strong>{{ obj.body }}"</strong></p>
+                          <label for="username">{{ field.label }}</label>
+                          {{ field }}
                         </div>
-                        
-                        <div class="for__group">
-                            <input class="btn btn--main" type="submit" value="Confirm" />
-                        </div>
+                        {% endfor %}
 
                     </form>
                 </div>
             </div>
         </div>
+      </div>
     </main>
+
 {% endblock content %}
