--- a/templates/main.html
+++ b/templates/main.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>jetchat</title>
-</head>
-<body>
-  {% include 'navbar.html' %}
-  {% if messages %}
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+    <title>JetChat - Find study partners around the world!</title>
+  </head>
+  <body>
+    
+    
+    {% include 'navbar.html' %}
+    {% if messages %}
     <ul class="messages">
       {% for message in messages %}
       <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
       {% endfor %}
     </ul>
-  {% endif %}
-  {% block content %}
+    {% endif %}
+    {% block content %}
 
 
-  {% endblock %}
-
-
-</body>
+    {% endblock %}
+    <script src="{% static "js/script.js" %}"></script>
+  </body>
 </html>
+
+
